Fix flex layout issues on form wizard
Flex layout caused animation choppiness when the soft keyboard was
shown/hidden on mobile devices.

--- a/src/styles/components/_form-wizard.scss
+++ b/src/styles/components/_form-wizard.scss
@@ -27,7 +27,6 @@
 
   &__previous,
   .form__button-container {
-    display: flex;
     max-width: 25%;
     position: absolute;
     top: 50%;
@@ -35,9 +34,13 @@
   }
 
   .form__button-container {
-    align-items: flex-end;
-    flex-direction: column-reverse;
     right: 0;
+
+    .button, // "Finish"
+    .form__next-button {
+      position: absolute;
+      right: 0;
+    }
 
     .button {
       border-bottom-right-radius: 0;
@@ -57,13 +60,11 @@
   }
 
   form {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-
-    div {
+    > div {
       &:not([class*='-hidden']) {
-        flex-basis: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
       }
     }
   }
