--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -33,7 +33,6 @@ $component-name: modal;
 
     &-content {
       height: inherit;
-      max-height: 80vh;
     }
 
     &-title {
@@ -42,7 +41,6 @@ $component-name: modal;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      max-height: 20vh;
       padding: 65px 0 0;
     }
   }
@@ -68,17 +66,30 @@ $component-name: modal;
   }
 
   &--fullscreen {
-    .#{$component-name} {
+    display: block;
 
+    .#{$component-name} {
       &__background {
         background-color: palette('background');
       }
 
       &__window {
-        display: flex;
-        flex: 1 1 auto;
         height: 100vh;
       }
+
+      &__layout {
+        display: block;
+
+        &-title {
+          display: block;
+          padding-top: 5rem;
+          text-align: center;
+        }
+      }
+    }
+
+    .input__container--hidden {
+      position: absolute;
     }
 
     .form {
